// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnenrollConfirmModal FinishedPane snapshot: did not give reason 1`] = `
<Fragment>
  <h4>
    You are unenrolled
  </h4>
  <p>
    This course will be removed from your dashboard.
  </p>
  <ActionRow>
    <Button
      onClick={[MockFunction props.handleClose]}
    >
      Return to dashboard
    </Button>
  </ActionRow>
</Fragment>
`;

exports[`UnenrollConfirmModal FinishedPane snapshot: gave reason 1`] = `
<Fragment>
  <h4>
    You are unenrolled
  </h4>
  <p>
    Thank you for sharing your reason for unenrolling.  
    This course will be removed from your dashboard.
  </p>
  <ActionRow>
    <Button
      onClick={[MockFunction props.handleClose]}
    >
      Return to dashboard
    </Button>
  </ActionRow>
</Fragment>
`;
